dfir_rs/tests/compile-fail/stable/surface_singleton_mut_mixed_group.stderr
error: Mutable singleton references must be the only one in their access group, but group `#{0}` has multiple.
 --> tests/compile-fail/stable/surface_singleton_mut_mixed_group.rs:7:44
  |
7 |         source_iter([2_i32]) -> map(|x| { *#{0} mut my_val += x; x }) -> for_each(|_| {});
  |                                            ^
